# g2o_practice

./: CMakeLists.txt  README.md
res/: pose_graph.txt
src/: refine.cpp  refine_3d.cpp
